2010-12-16  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Darin Adler.

        execCommand('JustifyCenter') adds extra BR
        https://bugs.webkit.org/show_bug.cgi?id=51082

        The bug was caused by moveParagraphContentsToNewBlockIfNecessary's adding a placeholder br
        to new block and not removing it later. Fixed the bug by removing it when the paragraph
        moved into the block didn't have a br at the end.

        Test: editing/execCommand/justify.html

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::moveParagraphContentsToNewBlockIfNecessary):
2010-12-16  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Darin Adler.

        execCommand('JustifyCenter') adds extra BR
        https://bugs.webkit.org/show_bug.cgi?id=51082

        Added a test to ensure WebKit executes Justify* properly. In particular,
        this test ensures WebKit does not erroneously add a BR at the end of each block.

        * editing/execCommand/justify-expected.txt: Added.
        * editing/execCommand/justify.html: Added.


Canonical link: https://commits.webkit.org/64561@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74214 268f45cc-cd09-0410-ab3c-d52691b4dbfc